internal/gatewayapi/testdata/mergebackends-http-gateway-traffic-route-mergetype-unset.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    mergeBackends: {}
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: http-route-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - name: rule-1
          matches:
            - path:
                value: /rule-1
          backendRefs:
            - name: service-1
              port: 8080
        - name: rule-2
          matches:
            - path:
                value: /rule-2
          backendRefs:
            - name: service-1
              port: 8080
backendTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: envoy-gateway
      name: btp-gateway-circuitbreaker
    spec:
      targetRefs:
        - group: gateway.networking.k8s.io
          kind: Gateway
          name: gateway-1
      circuitBreaker:
        maxConnections: 1024
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: btp-rule-2-no-mergetype
    spec:
      targetRefs:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          name: http-route-1
          sectionName: rule-2
